# bookworm

./: .gitignore  README.md
backend/: docker-compose.yml  kibana.yml  pyproject.toml
backend/bookworm/: asgi.py  settings.py  urls.py  wsgi.py
backend/bookworm/auth/: __init__.py  apps.py  models.py
backend/bookworm/auth/data/models/: __init__.py
backend/bookworm/auth/data/serializers/: LoginSerializer.py  RegisterSerializer.py
backend/bookworm/auth/interfaces/: LoginInterface.py  LogoutInterface.py  RegistrationInterface.py  __init__.py
backend/bookworm/auth/interfaces/serializers/: LoginSerializer.py  RegisterSerializer.py
backend/bookworm/auth/interfaces/viewsets/: LoginViewSet.py  LogoutViewSet.py  RefreshViewSet.py  RegistrationViewSet.py  __init__.py
backend/bookworm/books/: __init__.py  admin.py  apps.py
backend/bookworm/books/data/models/: Author.py  (+4 more)
backend/bookworm/books/interfaces/: AuthorInterface.py  BookInterface.py  __init__.py
backend/bookworm/books/models/: Author.py  Book.py  BookList.py  BookListItem.py  Review.py  __init__.py
backend/bookworm/core/: __init__.py  apps.py  urls.py
backend/bookworm/user/: __init__.py  admin.py  apps.py  models.py
backend/bookworm/user/interfaces/: UserInterface.py  UserViewSet.py  __init__.py
backend/bookworm/user/models/: AppUser.py
backend/drf_typescript_generator/tests/: test_drf_typescript_generator.py
backend/ts_generator/: Route.py  utils.py
backend/ts_generator/management/commands/: BaseApi.ts  generate_types.py
backend/ts_generator/tests/: test_drf_typescript_generator.py
(+32 files in other folders)
